Iteration 1.3 --1.3.4) Refactored the code in the gameboard class and the players library. Player.java is an interface that is implemented by North, East, South and West - particularly for setting the bounds and positions of each player's hand on the gameboard. Now that the correct interface is showing, the next step is to add the clickable event action on the cards, but before that some game mechanics need to be implemented (trump cards, starting cards - following suit)

--- a/BrdgTutCards/src/gameboard/Board1.form
+++ b/BrdgTutCards/src/gameboard/Board1.form
@@ -48,13 +48,22 @@
       </AuxValues>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="0" y="-10" width="1350" height="760"/>
+          <AbsoluteConstraints x="-50" y="0" width="1350" height="760"/>
         </Constraint>
       </Constraints>
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout">
         <Property name="useNullLayout" type="boolean" value="true"/>
       </Layout>
+      <SubComponents>
+        <Component class="cards.lib.Card" name="card1">
+          <Constraints>
+            <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
+              <AbsoluteConstraints x="150" y="50" width="-1" height="-1"/>
+            </Constraint>
+          </Constraints>
+        </Component>
+      </SubComponents>
     </Container>
   </SubComponents>
 </Form>
