--- a/BrdgTutCards/src/gameboard/Board1.form
+++ b/BrdgTutCards/src/gameboard/Board1.form
@@ -57,6 +57,9 @@
       </Layout>
       <SubComponents>
         <Component class="cards.lib.Card" name="card1">
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="Tester"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="150" y="50" width="-1" height="-1"/>
