Text fields clear when focus gained and centered form screens

--- a/BrdgTutCards/src/GUI/newUserAccountScreen.form
+++ b/BrdgTutCards/src/GUI/newUserAccountScreen.form
@@ -91,6 +91,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Enter your username here"/>
           </Properties>
+          <Events>
+            <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="txfuserNameFocusGained"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="290" y="100" width="170" height="30"/>
@@ -101,6 +104,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Enter Password here"/>
           </Properties>
+          <Events>
+            <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="txfPswrdFocusGained"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="290" y="150" width="170" height="30"/>
